# uploadpkg

./: README.md  azure-pipelines-upload.yml  pyproject.toml
src/mycompany_utils/: __init.py  helpers.py
