[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mycompany-utils"
version = "0.1.0"
description = "Internal utility package for testing Azure Artifacts"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
]

[tool.setuptools.packages.find]
where = ["src"]